#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.56)
AC_INIT(palx, 0.3, palxex@gmail.com)
AM_INIT_AUTOMAKE

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AM_PROG_CC_C_O

dnl Check for Allegro Installed
AM_PATH_ALLEGRO(4.2.0)

dnl Check for boost lib
AX_BOOST_BASE([1.33])
#AX_BOOST_REGEX

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h memory.h stdint.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_C_VOLATILE

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([atexit getcwd memmove memset select])

dnl check for pkg-config
AC_PATH_PROG(PKG_CONFIG, pkg-config, no)

dnl adplug
adplug_LIBS="`$PKG_CONFIG adplug --libs`"
adplug_CFLAGS="`$PKG_CONFIG adplug --cflags`"
AC_SUBST(adplug_LIBS)
AC_SUBST(adplug_CFLAGS)

dnl freetype2
freetype2_LIBS="`$PKG_CONFIG freetype2 --libs`"
freetype2_CFLAGS="`$PKG_CONFIG freetype2 --cflags`"
AC_SUBST(freetype2_LIBS)
AC_SUBST(freetype2_CFLAGS)

dnl lua50
lua_LIBS="`$PKG_CONFIG lua50 --libs`"
lua_CFLAGS="`$PKG_CONFIG lua50 --cflags`"
AC_SUBST(lua_LIBS)
AC_SUBST(lua_CFLAGS)

dnl luabind
luabind_LIBS="-Lluabind"
luabind_CFLAGS="-I/usr/include/luabind"
AC_SUBST(luabind_LIBS)
AC_SUBST(luabind_CFLAGS)

dnl Some stuff for the icon.
case "$target" in
    *-*-cygwin* | *-*-mingw32*)
       dnl Some stuff for the ico
       AC_CHECK_PROGS(WINDRES, windres, :)
    ;;
    *)
       WINDRES=":"
    ;;
esac
AM_CONDITIONAL(HAVE_WINDRES, test "x$WINDRES" != "x:")
AC_SUBST(WINDRES)
       

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
