#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.56)
AC_INIT(palx, 0.21, palxex@gmail.com)
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lalfont':
#AC_CHECK_LIB(alfont, alfont_textout)
# FIXME: Replace `main' with a function in `-lalleg':
#AC_CHECK_LIB(alleg, set_palette)
# FIXME: Replace `main' with a function in `-ladplug':
#AC_CHECK_LIB(adplug, CrixPlayer::factory)
# FIXME: Replace `main' with a function in `-lbinio':
#AC_CHECK_LIB(binio, binofstream::open)
# FIXME: Replace `main' with a function in `-lcomdlg32':
#AC_CHECK_LIB([comdlg32], [main])
# FIXME: Replace `main' with a function in `-lddraw':
#AC_CHECK_LIB([ddraw], [main])
# FIXME: Replace `main' with a function in `-ldinput':
#AC_CHECK_LIB([dinput], [main])
# FIXME: Replace `main' with a function in `-ldsound':
#AC_CHECK_LIB([dsound], [main])
# FIXME: Replace `main' with a function in `-ldxguid':
#AC_CHECK_LIB([dxguid], [main])
# FIXME: Replace `main' with a function in `-lgdi32':
#AC_CHECK_LIB([gdi32], [main])
# FIXME: Replace `main' with a function in `-lkernel32':
#AC_CHECK_LIB([kernel32], [main])
# FIXME: Replace `main' with a function in `-lole32':
#AC_CHECK_LIB([ole32], [main])
# FIXME: Replace `main' with a function in `-luser32':
#AC_CHECK_LIB([user32], [main])
# FIXME: Replace `main' with a function in `-lwinmm':
#AC_CHECK_LIB([winmm], [main])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h memory.h stdint.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_C_VOLATILE

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_CHECK_FUNCS([atexit getcwd memmove memset select])

dnl Some stuff for the icon.
case "$target" in
    *-*-cygwin* | *-*-mingw32*)
       dnl Some stuff for the ico
       AC_CHECK_TOOL(WINDRES, windres, :)
    ;;
    *)
       WINDRES=":"
    ;;
esac
       AM_CONDITIONAL(HAVE_WINDRES, test "x$WINDRES" != "x:")
       AC_SUBST(WINDRES)
       

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
